Enhance javadoc tool builder with basic properties